--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -183,12 +183,13 @@ body{
         align-items: center;
         justify-items: center;
         justify-content: flex-start;
-        width: 95%;
-        margin: 5% 2.5%;
+        width: 90%;
+        margin: auto;
+        margin-bottom: 20px;
         border-radius: 5px;
-        box-shadow: 1px 1px 3px gray;
+        box-shadow: 1px 1px 5px rgb(228 228 228);
         color: black;
-        font-weight: bold;
+        font-weight: 400;
     }
     .gestion{
         margin-left: 5%;
@@ -241,9 +242,6 @@ body{
         padding: 0 5%;
         margin: auto;
         margin-top: 30px;
-    }
-    .div-content:first-child{
-        margin-top: 10px;
     }
     .div-content{
         display: flex;
@@ -346,25 +344,29 @@ body{
     .agent-feeder{
         padding-left: 10px;
         display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
         justify-content: right;
         align-items: center;
         margin: 0;
     }
     .icone-h{
-        height: 20px;
-        width: 20px;
-        border-radius: 5px;
+        height: 40px;
+        width: 40px;
+        object-fit: cover;
         margin-right: 5px;
     }
     .f-agent{
         height: 40px;
         width: 40px;
+        object-fit: cover;
+        object-position: top;
         border-radius: 40px;
         margin-right: 5px;
     }
     .name{
         color: blue;
-        font-size: 23px;
+        font-size: 18px;
     }
     .pic-feeder{
         height: 100px;
@@ -376,13 +378,14 @@ body{
     .delete-f,
     .edit-f{
         display: inline-block;
-        height: 35px;
-        width: 35px;
+        height: 30px;
+        width: 30px;
         background-color: white;
         border-radius: 5px;
         box-shadow: 1px 1px 3px gray;
         padding: 5px;
-        margin:5px 0;
+        margin:10px 5px;
+        margin-bottom: 0;
         svg{
             display: inline-block;
         }
@@ -392,8 +395,8 @@ body{
 .add-agent{
     width: 100%;
     @media  screen and (min-width:700px)  {
-        width: 60%;
-        margin: 0 20%;
+        width: 50%;
+        margin: auto;
     }
     .head{
         padding: 5px 10%;
@@ -489,21 +492,218 @@ body{
         font-size: 16px;
     }
 }
-//programmes
-.menu-p{
-    .m-p{
+//program
+.programes{
+
+    @media  screen and (min-width:700px)  {
+        width: 60%;
+        margin: 0 20%;
+    }
+    .head{
         display: flex;
-        justify-content: safe;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding: 0 5%;
         width: 90%;
-        padding: 5px;
-        margin: 8px 5%;
-        box-shadow: 1px 1px 3px gray;
+        margin: auto;
+        align-items: center;
+        margin-bottom: 10px;
+        height: 50px;
+    }
+    .content{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        width: 90%;
+        padding: 0 5%;
+        margin: auto;
+        margin-top: 30px;
+    }
+    .div-content{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
         border-radius: 5px;
+        margin-bottom: 10px;
+        box-shadow: 1px 1px 5px rgb(228, 228, 228);
+        padding: 5%;
+        overflow-x: auto;
+        @media  screen and (min-width:800px) {
+            width: 30%;
+        }
+        @media  screen and (min-width:700px) {
+            width: 49%;
+        }
 
     }
-    .content-program{
-        width: 90%;
+    .picture{
+        height: 50px;
+        object-fit: cover;
+        width: 50px;
+        margin: auto;
+        border-radius: 100%;
+        @media  screen and (min-width:700px) {
+            height: 100px;
+            object-fit: cover;
+            width: 100px;
+            margin: auto;
+            border-radius: 100%;
+        }
+    }
+    .div-btn{
         display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+
+    }
+    .edit{
+        color: blue;
+    }
+
+    .delete{
+        display: block;
+        background-color: rgb(239, 239, 239);
+        height: 40px;
+        border-radius: 5px;
+        text-align: center;
+        padding: auto auto;
+        width: 100px;
+        font-size: 16px;
+        padding: 10px;
+        margin: 5px;
+        font-weight: bold;
+        color: black;
+        @media  screen and (min-width:800px) {
+            width: 100px;
+        }
+        @media  screen and (min-width:700px) {
+            width: 100%;
+        }
+
+    }
+    .edit{
+        display: block;
+        background-color: rgb(24, 136, 216);
+        height: 40px;
+        font-size: 16px;
+        border-radius: 5px;
+        color: white;
+        text-align: center;
+        padding: auto auto;
+        width: 100px;
+        padding: 10px;
+        margin: 5px;
+        font-weight: bold;
+        @media  screen and (min-width:800px) {
+            width: 100px;
+        }
+        @media  screen and (min-width:700px) {
+            width: 100%;
+        }
+    }
+    .names{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    .name-agent{
+        margin: 10px;
+        text-align: center;
+        font-size:16px;
+        font-family: sans-serif;
+        font-weight: bold;
+        width: 100%;
+    }
+    //feeder
+    .agent-feeder{
+        padding-left: 10px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: right;
+        align-items: center;
+        margin: 0;
+    }
+    .icone-h{
+        height: 40px;
+        width: 40px;
+        object-fit: cover;
+        margin-right: 5px;
+    }
+    .f-agent{
+        height: 40px;
+        width: 40px;
+        object-fit: cover;
+        object-position: top;
+        border-radius: 40px;
+        margin-right: 5px;
+    }
+    .name{
+        color: blue;
+        font-size: 18px;
+    }
+    .pic-feeder{
+        height: 100px;
+        margin-right: 2px;
+        border-radius: 2px;
+        width: 100px;
+    }
+    .action-f,
+    .delete-f,
+    .edit-f{
+        display: inline-block;
+        height: 30px;
+        width: 30px;
+        background-color: white;
+        border-radius: 5px;
+        box-shadow: 1px 1px 3px gray;
+        padding: 5px;
+        margin:10px 5px;
+        margin-bottom: 0;
+        svg{
+            display: inline-block;
+        }
+    }
+
+}
+//horaire
+.menu-h{
+
+    .header-horaire{
+        display: flex;
+        justify-content: space-between;
+        width: 90%;
+        align-items: center;
+        margin: auto;
+        @media  screen and (min-width:700px)  {
+            width: 60%;
+            margin: auto;
+        }
+    }
+
+
+    .m-h{
+        display: flex;
+        justify-content: left;
+        width: 100%;
+        box-shadow: 1px 1px 3px gray;
+        border-radius: 5px;
+        padding: 0;
+        margin-top: 10px;
+        @media  screen and (min-width:700px)  {
+            width: 48%;
+        }
+    }
+    .content-program{
+        width: 39%;
+        display: flex;
+        margin: 0;
+        margin-left: 5px;
+        padding: 0;
+        justify-content: center;
+        align-items: center;
         flex-direction: column;
     }
 
@@ -511,8 +711,10 @@ body{
         display: flex;
         text-align: start;
         justify-content: space-around;
-        padding: 10px;
+        padding: 0;
         flex-direction: column;
+        width: 29%;
+        margin-right: 5px;
 
     }
     a{
@@ -520,34 +722,67 @@ body{
         margin: 5px 0;
     }
     .div{
-        margin: 5px 0;
-        padding: 10px;
+        margin:0;
+        padding: 0;
         display: flex;
         align-items: center;
+    }
+    .title-horaire{
+        width: max-content;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .add{
+        display: inline-block;
+        margin-left: 10px;
     }
 
     //horaire
-    .heure{
-        width: 30%;
-    }
-    .m-h{
+    .content{
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        flex-wrap: wrap;
+        width: 90%;
+        margin: auto;
+        @media  screen and (min-width:700px)  {
+            width: 60%;
+            margin: auto;
+        }
+    }
+    .heure{
+        width: 40%;
     }
     .action-h{
-        width:20%
+        width:30%;
+        display: flex;
+        align-items:center;
+        justify-content: center;
+    }
+    .gestion{
+        font-size: 16px;
+        font-weight: 300;
     }
     .lampe{
         display: flex;
         align-items:center;
-        width: 20%;
-        padding-right: 20px;
+        width: 30%;
+        justify-content: center;
+        padding:0;
     }
 
 }
 //coyupure
 .menu-coupure{
+    width: 80%;
+    margin: auto;
+    box-shadow: 1px 1px 5px rgb(228, 228, 228);
+    padding: 10px;
+    border-radius: 10px;
+    @media  screen and (min-width:500px)  {
+        width: 35%;
+        margin: auto;
+    }
     .m-coupure{
         flex-wrap: wrap;
     }
@@ -583,10 +818,10 @@ body{
         text-align: center;
         height: 50px;
         font-size: 16px;
-        width: 60px;
+        width: 50px;
         color: white;
-        padding: 15px;
-        font-weight: bold;
+        padding: 14px 11px;
+        font-weight: 300;
         border-radius: 30px;
         background-color: rgb(38, 38, 255);
         font-family:sans-serif;
