--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,6 +9,61 @@
     padding: 0;
     background-color: white;
 }
+.logout-menu{
+    display: none;
+
+}
+.hiden-div{
+    display: none;
+    transition: 5000ms;
+}
+.div-logout-show{
+    display: block;
+    transition: 5000ms;
+}
+.logout-menu{
+    width: 250px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 1px 1px 5px rgb(245, 245, 245);
+    height: max-content;
+    transform: translate(0,40%);
+    border-radius: 5px;
+    ul{
+        background-color: inherit;
+        list-style-type: none;
+    }
+    .title{
+        font-size: 18px;
+        width: 100%;
+        height: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgb(228, 228, 228);
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+    }
+
+    .p{
+        background-color: inherit;
+        padding: 10px;
+        font-weight: 600;
+        font-size: 17px;
+        height: 40px;
+        border-top: 1px solid white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .logoutuser{
+        background-color: rgb(252, 252, 252);
+       a{
+        color: rgb(63, 118, 229);
+        font-weight: bold;
+       }
+    }
+}
+
 .logo-img{
     height: 20px;
     width: 20px;
@@ -51,6 +106,7 @@ body{
         display: flex;
         justify-content: right;
         align-items: center;
+        background-color: rgba(255, 255, 255, 0);
     }
 
     .name{
@@ -159,15 +215,6 @@ body{
     .git{
         color: black;
     }
-    }
-    form::after{
-        margin-top: 20px;
-        width: 100%;
-        content:"connectez-vous avec";
-        display: block;
-        text-align: center;
-        font-size: 20px;
-        font-family: Roboto, sans-serif;
     }
 }
 //menu
@@ -469,15 +516,16 @@ body{
     }
     .input-form{
         width: 100%;
-        height: 50px;
+        height: 40px;
         border: 1px solid gray;
         border-radius: 5px;
         padding: 0 10px;
         font-size: 16px;
+        font-weight: 900;
     }
     .btn{
         width: 100%;
-        height: 50px;
+        height: 40px;
         border-radius: 5px;
         background-color: rgb(109, 109, 212);
         border: 1px solid rgb(109, 109, 212);
